samples/_failures_safe/1761730538_5c11b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50663236.c: In function ‘main’:
./samples/SAFE/__tmp_50663236.c:143:16: error: missing terminating " character
  143 |         printf("%6d | %5.2f,%5.2f,%5.2f | %5.2f,%
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_50663236.c:143:9: error: expected expression at end of input
  143 |         printf("%6d | %5.2f,%5.2f,%5.2f | %5.2f,%
      |         ^~~~~~
./samples/SAFE/__tmp_50663236.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_50663236.c:143:9: error: expected declaration or statement at end of input
